<resources>
    <string name="app_name">Steerlyfe</string>
    <string name="map_api_key">AIzaSyDgGMTzz9uhLFD7r1oefNrstuVAsXd3C9w</string>
    <string name="home">Home</string>
    <string name="search_steerlyfe_market">Search Steerlyfe Market ...</string>
    <string name="trending_products">Trending Products</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="nikeBag">Nike Bag</string>
    <string name="watch">Watch</string>
    <string name="shoes">Shoes</string>
    <string name="dollarSign">$</string>
    <string name="explore">Explore</string>
    <string name="categories">Categories</string>
    <string name="discover">Discover</string>
    <string name="steerlyfe_market">Steerlyfe Market</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="enter_valid_mobile_number">Enter valid mobile number</string>
    <string name="name">Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="continueText">Continue</string>
    <string name="accountDetails">Account Details</string>
    <string name="edit">Edit</string>
    <string name="OK">Ok</string>
    <string name="verificationCode">Verification Code</string>
    <string name="verifyNow">Verify Now</string>
    <string name="confirmText">We will be verifying the phone number : </string>
    <string name="confirmationBottomText">Is this Ok , or would you like to edit the number ? </string>
    <string name="some_errors_occurred_text">Some Errors Occurred , Please try again later</string>
    <string name="enter_valid_verification_code">Enter Valid Verification Code</string>
    <string name="verifyOtp">Verify OTP</string>
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="you_dont_have_account_text">You don\'t have account .</string>
    <string name="enterName">Enter name</string>
    <string name="enterEmailAddress">Enter email address</string>
    <string name="lifetimeSavings">Lifetime Savings</string>
    <string name="projectedSavings">Projected Savings</string>
    <string name="lifeStyle">Lifestyle</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="dummyAmount">$ 0.0</string>
    <string name="accountInformation">Account Information</string>
    <string name="viewYourMessages">View your Messages</string>
    <string name="messages">Messages</string>
    <string name="favourites">Favorites</string>
    <string name="viewYourFavouriteProduct">View Your Favorite Product</string>
    <string name="settings">Settings</string>
    <string name="logOut">Logout</string>
    <string name="session_out_please_login_again">Session out please login again</string>
    <string name="titleHeading">Title</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="product_name">Product Name</string>
    <string name="checkOut">Checkout</string>
    <string name="productMustBeText">Product must be greater than 1</string>
    <string name="one">1</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="menu">Menu</string>
    <string name="reviews">Reviews</string>
    <string name="writeAReview">+ Write a Review</string>
    <string name="loadMore">Load More</string>
    <string name="dummyName">John Doe</string>
    <string name="dummyDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="by">By</string>
    <string name="on">on</string>
    <string name="activity">Activity</string>
    <string name="local">Local</string>
    <string name="dummyLikes">10 Likes</string>
    <string name="dummyComments">20 Comments</string>
    <string name="newItemsAlert">New Items Alert</string>
    <string name="retailerName">Retailer Name</string>
    <string name="aBetterWayToSnack">A Better Way To Snack</string>
    <string name="noProductsAvailable">No Product Available</string>
    <string name="DOLLAR_SIGN">$</string>
    <string name="more_details">More Detail</string>
    <string name="address">Address</string>
    <string name="location_service">Location Service</string>
    <string name="gps_network_not_enabled">Please enable GPS location</string>
    <string name="my_location">My Location</string>
    <string name="nearByStores">Near By Stores</string>
    <string name="suggestedProducts">Suggested Products</string>
    <string name="follow">Follow</string>
    <string name="enterYourPhoneNumber">Enter your phone number</string>
    <string name="getOtp">Get Otp</string>
    <string name="byClickingText"><![CDATA[By clicking \'GET OTP\' you are agree to our Terms & Conditions and Privacy Policy.]]></string>
    <string name="byClickingSignUpText"><![CDATA[By clicking \'Sign up\' you are agree to our Terms & Conditions and Privacy Policy.]]></string>
    <string name="plus">+</string>
    <string name="search">Search ...</string>
    <string name="noCountryAvailable">No Countries Available</string>
    <string name="dummyCode">+91</string>
    <string name="chooseCallingCode">Choose Calling Code</string>
    <string name="enterYourCode">Enter your code</string>
    <string name="didntGetCode">Didn\'t get code</string>
    <string name="verify">Verify</string>
    <string name="privacy_policy_text">Privacy Policy.</string>
    <string name="terms_and_conditions_text">Terms &amp; Conditions</string>
    <string name="phoneVerification">Phone Verification</string>
    <string name="noItemInCart">No item in cart</string>
    <string name="noReviewsAvailable">No reviews available</string>
    <string name="rating">Rating</string>
    <string name="submit">Submit</string>
    <string name="choose">Choose</string>
    <string name="enter_feedback">Enter feedback</string>
    <string name="question">Question</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="of">of</string>
    <string name="ten">10</string>
    <string name="hash">#</string>
    <string name="quizOptions">Quiz Options</string>
    <string name="enterValidKeyword">Enter valid keyword</string>
    <string name="reOrder">Reorder</string>
    <string name="autoOrder">Auto Order</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_noon">Good noon</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="itemAddedToFavourites">Item added to favorites</string>
    <string name="itemRemovedFromFavourites">Item removed from favorites</string>
    <string name="skip">Skip</string>
    <string name="pleaseChooseYourOption">Please Choose Your Option</string>
    <string name="tellUsAboutYou">Tell Us About You</string>
    <string name="previousQuestion">Previous Question</string>
    <string name="nextQuestion">Next Question</string>
    <string name="submitQuestions">Submit Questions</string>
    <string name="saved">Saved</string>
    <string name="viewYourSavedContents">View Your Saved Contents</string>
    <string name="yourSavings">Your Savings</string>
    <string name="searchBrandsOrProducts">Search brand or products...</string>
    <string name="submitQuestionsConfirmationText">Do you want to submit these questions?</string>
    <string name="skipQuestionsConfirmationText">Do you want to skip quiz questions?</string>
    <string name="browseBy">Browse By</string>
    <string name="items">Items</string>
    <string name="add">Add</string>
    <string name="noOfItems">No of items</string>
    <string name="sortBy">Sort By :</string>
    <string name="topBrands">Top Brands</string>
    <string name="filter">Filter</string>
    <string name="sortOptions">Sort Options</string>
    <string name="topRated">Top Rated</string>
    <string name="priceLowToHigh">Price Low to High</string>
    <string name="priceHighToLow">Price High to Low</string>
    <string name="mostPopular">Most Popular</string>
    <string name="newestArrivals">Newest Arrivals</string>
    <string name="featured">Featured</string>
    <string name="noProductAvailableText">It seems like there is no product available as per your preference.</string>
    <string name="addPromoCode">Add Promo Code...</string>
    <string name="favorite_products">Favorite Products</string>
    <string name="itemAddedToCart">Item added to cart</string>
    <string name="itemRemovedFromCart">Item removed from cart</string>
    <string name="noActivityAvailableText">It seems like there is no activity available</string>
    <string name="totalCost">Total Cost</string>
    <string name="noProductAvailableInFavoriteText">It seems like you don\'t have any product in your favorite list.</string>
    <string name="chooseASeller">Choose A Seller</string>
    <string name="productInfo">Product Info</string>
    <string name="category">Category</string>
    <string name="inStore">In-Store</string>
    <string name="deliverNow">Deliver Now</string>
    <string name="shipping">Shipping</string>
    <string name="addToCart">Add to cart</string>
    <string name="noSellerAvailable">No Seller Available</string>
    <string name="deliveryCharges">Delivery Charges</string>
    <string name="itSeemsLike">It seems like</string>
    <string name="isNotAvailableFor">is not available for </string>
    <string name="colon">:</string>
    <string name="sellerName">Seller Name</string>
    <string name="seller">Seller</string>
    <string name="manageAddress">Manage Address</string>
    <string name="useAddress">Use  Address</string>
    <string name="noAddressAvailable">No Address Available</string>
    <string name="enterAddress">Enter Address</string>
    <string name="enterPincode">Enter Pincode</string>
    <string name="pincode">Pincode</string>
    <string name="enterCouponName">Enter Promo Code</string>
    <string name="viewYourAddress">View Your Address</string>
    <string name="viewYourOrders">View Your Orders</string>
    <string name="orders">Orders</string>
    <string name="placeOrderText">Do you want to place order?</string>
    <string name="placeOrder">Place Order</string>
    <string name="orderId">Order ID</string>
    <string name="viewDetails">View Details</string>
    <string name="placedOn">Placed On</string>
    <string name="orderStatus">Order Status</string>
    <string name="orderDate">Order Date</string>
    <string name="status">Status</string>
    <string name="shippingAddress">Shipping Address</string>
    <string name="viewOrderDetail">View Order Detail</string>
    <string name="placed">Placed</string>
    <string name="noOrderAvailableYet">No Order Available Yet</string>
    <string name="delivered">Delivered</string>
    <string name="writeAReviewText">Write a review</string>
    <string name="orderInfo">Order Info</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="productPrice">Product Price</string>
    <string name="productCost">Product Cost</string>
    <string name="fullName">Full Name</string>
    <string name="enterFullName">Enter Full Name</string>
    <string name="country">Country</string>
    <string name="enterCountry">Enter Country</string>
    <string name="zipCode">Zip Code</string>
    <string name="enterZipCode">Enter Zip Code</string>
    <string name="locality">Locality</string>
    <string name="enterLocality">Enter Locality</string>
    <string name="cityDistrict">City/District</string>
    <string name="enterCityDistrict">Enter City/District</string>
    <string name="state">State</string>
    <string name="enterState">Enter State</string>
    <string name="updateInfo">Update Info</string>
</resources>