<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activitiesPackage.UpdateDataActivity">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <com.napworks.steerlyfeapp.fontPackage.CustomTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textColor="@color/pure_black"
            android:textSize="14sp" />

        <com.napworks.steerlyfeapp.fontPackage.CustomEditTextRegular
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/white_background_stroke_less_round"
            android:gravity="center_vertical"
            android:hint="@string/enterName"
            android:padding="10dp"
            android:textColor="@color/pure_black"
            android:textSize="13sp" />

        <com.napworks.steerlyfeapp.fontPackage.CustomTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/emailAddress"
            android:textColor="@color/pure_black"
            android:textSize="14sp" />

        <com.napworks.steerlyfeapp.fontPackage.CustomEditTextRegular
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/white_background_stroke_less_round"
            android:gravity="center_vertical"
            android:hint="@string/enterEmailAddress"
            android:padding="10dp"
            android:textColor="@color/pure_black"
            android:textSize="13sp" />

        <com.napworks.steerlyfeapp.fontPackage.CustomTextViewBold
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/black_background_round"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/updateInfo"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>