<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@drawable/steerlyfe_logo" />

        <ImageView
            android:id="@+id/steerlyfeText"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/logo"
            android:contentDescription="@string/app_name"
            android:src="@drawable/steerlyfe_text" />
    </RelativeLayout>

    <com.napworks.steerlyfeapp.fontPackage.CustomTextViewRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/address"
        android:textColor="@color/pure_black"
        android:textSize="16sp" />

    <com.napworks.steerlyfeapp.fontPackage.CustomEditTextRegular
        android:id="@+id/addressTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:lines="3"
        android:background="@drawable/grey_stroke_background_round"
        android:fontFamily="serif"
        android:hint="@string/enterAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="13sp" />

    <com.napworks.steerlyfeapp.fontPackage.CustomTextViewRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/pincode"
        android:textColor="@color/pure_black"
        android:textSize="16sp" />

    <com.napworks.steerlyfeapp.fontPackage.CustomEditTextRegular
        android:id="@+id/pincode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/grey_stroke_background_round"
        android:fontFamily="serif"
        android:hint="@string/enterPincode"
        android:maxLength="10"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="13sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <com.napworks.steerlyfeapp.fontPackage.CustomTextViewBold
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/black_background_round"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/add"
            android:textColor="@color/white" />

        <com.napworks.steerlyfeapp.fontPackage.CustomTextViewBold
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/black_background_round"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>